--- a/index.html
+++ b/index.html
@@ -718,6 +718,7 @@
   <title>Dashboard Financeiro</title>
   <link rel="stylesheet" href="styles.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="script.js" defer></script>
 </head>
 <body>
   <div class="container">
@@ -784,7 +785,6 @@
         <option value="Transporte">Transporte</option>
         <option value="Lazer">Lazer</option>
         <option value="Outros">Outros</option>
-        <option value="Nova">Nova Categoria...</option>
       </select>
       <select id="type">
         <option value="income">Receita</option>
@@ -799,6 +799,5 @@
 
     <button onclick="exportData()">Exportar Dados</button>
   </div>
-  <script src="script.js"></script>
 </body>
 </html>
