--- a/index.html
+++ b/index.html
@@ -710,8 +710,6 @@
     </div>
   </section>
 
-o melhroa 
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -903,6 +901,10 @@ o melhroa
         <div class="filter">
             <select id="categoryFilter">
                 <option value="">Todas Categorias</option>
+                <option value="Alimentação">Alimentação</option>
+                <option value="Transporte">Transporte</option>
+                <option value="Lazer">Lazer</option>
+                <option value="Outros">Outros</option>
             </select>
             <select id="typeFilter">
                 <option value="">Todos Tipos</option>
